# local-pastebin

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  deploy_server.sh  docker-compose.yml  pastes.db  pyproject.toml  test_app.py
backend/: api.py  models.py
static/css/: style.css
templates/: base.html  index.html  view.html
tests/: test_app.py
utils/: utilities.py
